--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -11,3 +11,5 @@
 @import "../../component/nestedComponent/home/homeMobileStories";
 @import "../../component/nestedComponent/home/toggelmobile";
 @import "../../component/re-usabelComponent/scss";
+@import "../../component/search/";
+@import "../../component/nestedComponent/scss";
