--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -59,7 +59,7 @@
                 display: none;
             }
         }
-        .post {
+        .home_post {
             margin-top: 30px;
         }
 
