--- a/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
+++ b/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
@@ -1,9 +1,12 @@
 .icon {
     width: 40px;
     height: 40px;
-    margin: 0px 5px 0 0;
-    text-align: center;
+    margin: 0px 4px 0 0;
+    // text-align: center;
     border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 // .search {
@@ -16,39 +19,56 @@
 //     display: none;
 // }
 // }
-// .toggel_main {
-//     width: 162px;
-//     border: 1px solid #bfbfbf;
-//     border-radius: 30px;
-//     height: 60px;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     // transition: 0.5s !important;
-//     .same {
-//         transition: all 0.2s ease-in;
-//         width: 76px;
-//         height: 50px;
-//         border-radius: 30px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//     }
-//     .homewow {
-//         background: #fe5e71;
-//         path {
-//             fill: white;
-//             stroke: #fe5e71;
-//             stroke-width: 0px;
-//         }
-//     }
-//     .search {
-//         background: #f2bd6f;
-//         svg {
-//             fill: white;
-//         }
-//     }
-// }
+.toggel_main {
+    .toggel {
+        width: 162px;
+        border: 1px solid #bfbfbf;
+        border-radius: 30px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        // transition: 0.5s !important;
+        .same {
+            transition: all 0.2s ease-in;
+            width: 76px;
+            height: 50px;
+            border-radius: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .homewow {
+            background: #fe5e71;
+            path {
+                fill: white;
+                stroke: #fe5e71;
+                stroke-width: 0px;
+            }
+        }
+        .search {
+            background: #f2bd6f;
+            svg {
+                fill: white;
+            }
+        }
+    }
+    .text {
+        // transition: all 0.2s ease-in;
+        display: flex;
+        justify-content: space-around;
+        color: #bfbfbf;
+        .text_color_trending {
+            transition: all 0.2s ease-in;
+            color: #fe5e71;
+        }
+        .text_color_explore {
+            transition: all 0.2s ease-in;
+            color: #f2bd6f;
+        }
+    }
+}
 
 // .fullSearch {
 //     width: 170px !important;
