--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -1,3 +1,4 @@
 @import "../setting/commonHeading";
 @import "../setting/commonChangeText";
 @import "../setting/commonSwitch";
+@import "../notification/subNotification";
