--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -13,3 +13,4 @@
 @import "../../component/re-usabelComponent/scss";
 @import "../../component/search/";
 @import "../../component/nestedComponent/scss";
+@import "../../component/notification";
