--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -2,3 +2,4 @@
 @import "../setting/commonChangeText";
 @import "../setting/commonSwitch";
 @import "../notification/subNotification";
+@import "../friendsList/requestCard";
