--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -14,3 +14,4 @@
 @import "../../component/search/";
 @import "../../component/nestedComponent/scss";
 @import "../../component/notification";
+@import "../../component/friendsList";
