--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -12,7 +12,7 @@
     .logo {
         position: fixed;
         top: 32px;
-        left: 36px;
+        left: 49px;
     }
     .menu-scroll {
         // max-height: 100vh;
@@ -596,6 +596,17 @@
     footer {
         display: block !important;
     }
+}
+
+@media screen and (max-width: 1100px) {
+    // .layout {
+    // .menu-scroll {
+    // .smallwidth {
+    // min-width: 80px !important;
+    // max-width: 30px !important;
+    //    }
+    // }
+    // }
 }
 // .ant-menu-submenu-inline {
 //     .ant-menu-submenu-title {
