--- a/component/nestedComponent/home/homePost/index.scss
+++ b/component/nestedComponent/home/homePost/index.scss
@@ -1,8 +1,8 @@
 .post-main {
     // display: flex;
     // width: 100%;
-    max-width: 580px;
-    // min-width: 100%;
+    // max-width: 580px;
+    min-width: 100%;
     border-bottom: 0.001em solid #eaeaea;
 
     padding-bottom: 42px;
@@ -11,7 +11,8 @@
     // height: 100px;
     .profile-main {
         display: flex;
-        max-width: 580px;
+        // width: 90%;
+        // max-width: 580px;
         max-height: 60px;
         justify-content: space-between;
         // justify-content: center;
@@ -63,54 +64,66 @@
             font-size: 17px;
         }
     }
-    .trend {
-        display: flex;
-        // justify-content: space-between !important;
+    // .trend {
+    //     display: flex;
+    //     // justify-content: space-between !important;
 
-        .views {
-            margin-right: 140px !important;
-        }
-    }
+    //     .views {
+    //         // margin-right: 140px !important;
+    //     }
+    // }
     .bottom {
         // max-width: 580px;
         width: 100%;
         display: flex;
+        justify-content: space-between;
         // justify-content: space-between;
-        align-items: center;
-
-        .heart {
+        // align-items: center;
+        .icons {
             display: flex;
-            align-items: center;
-            .heartIcon {
+            justify-content: space-between;
+            // width: 50%;
+            // justify-content: space-evenly;
+            // width: 100%;
+            // justify-content: space-between;
+            .heart {
                 display: flex;
-                // justify-content: center;
-                // align-items: center;
-                max-width: 24px;
-                max-height: 24px;
-            }
+                align-items: center;
+                .heartIcon {
+                    display: flex;
+                    // justify-content: center;
+                    // align-items: center;
+                    max-width: 24px;
+                    max-height: 24px;
+                }
 
-            p {
-                color: #bfbfbf;
-                margin: 0px 5px;
+                p {
+                    color: #bfbfbf;
+                    margin: 0px 5px;
+                }
+            }
+            .views {
+                display: flex;
+                align-items: center;
+                margin-left: 20px;
+                .viewsIcon {
+                    display: flex;
+                    // justify-content: center;
+                    // align-items: center;
+                    max-width: 24px;
+                    max-height: 24px;
+                }
+                p {
+                    color: #bfbfbf;
+                    margin: 0px 5px;
+                }
             }
         }
-        .views {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-            .viewsIcon {
-                display: flex;
-                // justify-content: center;
-                // align-items: center;
-                max-width: 24px;
-                max-height: 24px;
-            }
-            p {
-                color: #bfbfbf;
-                margin: 0px 5px;
-            }
-        }
+
         .Trending {
+            // width: 100%;
+            display: flex;
+            justify-content: flex-end;
             max-height: 24px;
             p {
                 color: red;
