--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,7 +24,7 @@ input:focus {
   box-shadow: none !important;
 }
 button:focus {
-  border-color: #f9445b !important;
+  border-color: none !important;
   -webkit-box-shadow: none !important;
   -moz-box-shadow: none !important;
   box-shadow: none !important;
