friends-list-ui

--- a/component/friendsList/index.scss
+++ b/component/friendsList/index.scss
@@ -5,17 +5,7 @@
     &::-webkit-scrollbar {
         display: none;
     }
-    .request_topbar_main {
-        margin: 40px 0px 0px 40px;
-    }
-    .request_card_main {
-        // overflow: scroll;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        margin-bottom: 30px;
-        .request_card {
-            margin: 40px 0px 0px 0px;
-        }
-    }
+    // .request_topbar_main {
+    //     // margin: 40px 0px 0px 40px;
+    // }
 }
