--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -1,3 +1,7 @@
 @import "../search/searchBar";
 @import "../notification/notificationHeading";
 @import "../friendList/topBar";
+@import "../friendList/friendsRequest";
+@import "../friendList/allFriends";
+@import "../friendList/closeFriends";
+@import "../friendList/family";
