--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -3,24 +3,97 @@
         font-weight: 600;
         font-size: 24px;
         color: #1e293b;
+        margin-top: 40px;
+        margin-left: 40px;
     }
     .top_bar {
-        .selected {
-            background: #c39eff !important;
-            color: #ffffff !important;
-        }
-        .btn-primary {
-            background: white;
-            border-radius: 12px;
-            color: #010010;
-            width: 190px;
-            height: 56px;
-            border-color: white;
+        .ant-tabs-top > .ant-tabs-nav::before {
+            border: none;
         }
 
-        .btn-primary:hover {
-            background: #c39eff;
-            color: #ffffff;
+        .ant-tabs-nav {
+            margin: 0px 40px 0px 40px;
+            .ant-tabs-extra-content {
+                .add_button {
+                    background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+                    color: #ffffff;
+                    width: 140px;
+                    height: 36px;
+                    padding: unset;
+                    border-radius: 8px;
+                    font-weight: 600;
+
+                    p {
+                        margin: unset;
+                        font-size: 12px;
+                    }
+                }
+            }
+            .ant-tabs-nav-more {
+                display: none;
+            }
+            .ant-tabs-nav::after {
+                display: none;
+            }
+            .ant-tabs-ink-bar {
+                display: none;
+            }
+
+            .ant-tabs-tab + .ant-tabs-tab {
+                margin: unset;
+            }
+            .ant-tabs-tab {
+                padding: unset;
+            }
+            .ant-tabs-tab-active {
+                .friends_request {
+                    background: #c39eff;
+                    color: #ffffff;
+                    font-weight: 600;
+                }
+                .all_frineds {
+                    background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+                    color: #ffffff;
+                    font-weight: 600;
+                }
+                .close_friends {
+                    background: #6ec2ff;
+                    color: #ffffff;
+                    font-weight: 600;
+                }
+                .family {
+                    background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+                    color: #ffffff;
+                    font-weight: 600;
+                }
+            }
+
+            .btn-primary {
+                background: white;
+                border-radius: 12px;
+                color: #010010;
+                width: 190px;
+                height: 56px;
+                border-color: white;
+            }
+
+            .friends_request:hover {
+                background: #c39eff;
+                color: #ffffff;
+            }
+
+            .all_frineds:hover {
+                background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+                color: #ffffff;
+            }
+            .close_friends:hover {
+                background: #6ec2ff;
+                color: #ffffff;
+            }
+            .family:hover {
+                background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+                color: #ffffff;
+            }
         }
     }
 }
