--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -6,6 +6,7 @@
     // padding:152px 75px 0 75px
     border-radius: 16px;
     position: relative;
+    margin: 0px;
     // background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.8) 100%),
     //     linear-gradient(0deg, rgba(110, 194, 255, 0.57), rgba(110, 194, 255, 0.57));
 
