--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -5,3 +5,5 @@
 @import "../friendList/allFriends";
 @import "../friendList/closeFriends";
 @import "../friendList/family";
+@import "../home/storySlider/createStory";
+@import "../home/storySlider";
