--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -3,3 +3,4 @@
 @import "../setting/commonSwitch";
 @import "../notification/subNotification";
 @import "../friendsList/requestCard";
+@import "../friendsList/smallRequestCard";
