--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -97,3 +97,64 @@
         }
     }
 }
+
+.ant-modal {
+    width: 700px !important;
+    height: 740px !important;
+    .ant-modal-content {
+        // width: 100%;
+        height: 740px;
+        // width: 100%;
+
+        .ant-modal-close {
+            color: #010010;
+        }
+        .ant-modal-header {
+            margin: 0 20px 0 20px;
+            padding: 20px 18px 20px 18px;
+            .ant-modal-title {
+                font-weight: 500;
+                font-size: 20px;
+                color: #010010;
+            }
+        }
+
+        .ant-modal-body {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+            .ant-input-affix-wrapper {
+                border-radius: 30px;
+                height: 50px;
+                padding-left: 24px;
+                background: #f7f7f7;
+                input {
+                    background: #f7f7f7;
+                    font-size: 16px;
+                    color: #bfbfbf;
+                }
+            }
+            .ant-input-affix-wrapper:focus,
+            .ant-input-affix-wrapper-focused {
+                -webkit-box-shadow: 0 0 0 1px #f9445b;
+                box-shadow: 0 0 0 1px #f9445b;
+
+                border-color: #f9445b;
+            }
+            .ant-input-affix-wrapper:hover {
+                border-color: #f9445b !important;
+            }
+            // .ant-input-prefix {
+            //     width: 30px;
+            // }
+        }
+        .ant-modal-footer {
+            display: none;
+        }
+    }
+}
+
+// .small_requestCard_main {
+//     // margin-right: 20px;
+// }
