--- a/component/re-usabelComponent/friendsList/requestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/requestCard/index.scss
@@ -10,57 +10,57 @@
             color: #010010;
             font-weight: 600;
             // margin-top: 5px;
+            margin-bottom: -9px;
+
+            font-size: 16px;
         }
-        .mutual_main {
+        // .mutual_main {
+        //     width: 100%;
+
+        // display: flex;
+
+        .mutual {
+            position: relative;
             width: 100%;
+            height: 60px;
+            // height: 100px;
 
-            height: 30px;
-            // display: flex;
-
-            .mutual {
-                position: relative;
-                width: 100%;
-
-                // height: 100px;
-
-                .image1 {
-                    position: absolute;
-                    top: 0;
-                    left: -15px;
-                    z-index: 3;
-                }
-                .image2 {
-                    position: absolute;
-                    top: 0;
-                    left: 0px;
-                    z-index: 2;
-                }
-                .image3 {
-                    position: absolute;
-                    top: 0;
-                    left: 20px;
-                    z-index: 1;
-                }
-            }
-            .mutual_friends {
-                color: #bfbfbf;
-                font-weight: 500;
-                font-size: 12px;
-                // margin-left: 80px;
-                width: 100%;
+            .image1 {
                 position: absolute;
-                top: 20px;
-                left: 70px;
+                top: 0;
+                left: -15px;
+                z-index: 3;
+            }
+            .image2 {
+                position: absolute;
+                top: 0;
+                left: 0px;
+                z-index: 2;
+            }
+            .image3 {
+                position: absolute;
+                top: 0;
+                left: 18px;
+                z-index: 1;
             }
         }
+        .mutual_friends {
+            color: #bfbfbf;
+            font-weight: 500;
+            font-size: 12px;
+            // margin-left: 80px;
+            width: 100%;
+            position: absolute;
+            top: 20px;
+            left: 70px;
+        }
+        // }
     }
 
     .freind_request {
         .btn-primary {
             background: #c39eff;
             color: #ffffff;
-
-            margin-top: 20px;
         }
     }
     .all_freinds {
@@ -68,8 +68,6 @@
             background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
 
             color: #ffffff;
-
-            margin-top: 20px;
         }
     }
     .close_friends {
@@ -77,16 +75,12 @@
             background: #6ec2ff;
 
             color: #ffffff;
-
-            margin-top: 20px;
         }
     }
     .family {
         .btn-primary {
             background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
             color: #ffffff;
-
-            margin-top: 20px;
         }
     }
     .reject {
