--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -98,7 +98,7 @@
     }
 }
 
-.ant-modal {
+.friendRequest_modal {
     width: 700px !important;
     height: 740px !important;
     .ant-modal-content {
