--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -7,3 +7,6 @@
 @import "../friendList/family";
 @import "../home/storySlider/createStory";
 @import "../home/storySlider";
+@import "../home/storySlider/createStory/createStoryOption";
+@import "../home/storySlider/createStory/createTextStory";
+@import "../home/trending";
