--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -4,3 +4,5 @@
 @import "../notification/subNotification";
 @import "../friendsList/requestCard";
 @import "../friendsList/smallRequestCard";
+@import "../storySlider/createStory/button";
+@import "../home/trending";
