--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -16,7 +16,7 @@
         // max-height: 100vh;
         flex-direction: column;
         align-items: center;
-        margin: 10px 30px 30px 30px;
+        margin: 0px 30px 0px 30px;
         // justify-content: center;
         // justify-content:space-between;
         // padding: 40px 80px 30px;
@@ -33,6 +33,7 @@
 
         .status {
             width: 100%;
+            margin-top: 40px;
         }
 
         .home_post {
@@ -48,7 +49,7 @@
         width: 40%;
         // height: 100vh;
         overflow: scroll;
-        margin: 0px 10px 10px 10px;
+        margin: 0px 10px 0px 10px;
         // position: fixed;
         // right: -40px;
         // position: fixed;
@@ -58,29 +59,37 @@
         &::-webkit-scrollbar {
             display: none;
         }
-
-        .request {
-            max-width: 360px;
-            display: flex;
-            justify-content: space-between;
-            margin-top: 34px;
+        .text {
             p {
-                color: rgba(1, 0, 16, 1);
+                margin: 40px 0px 10px 20px;
+                color: #010010;
+                font-weight: 500;
                 opacity: 0.5;
             }
-            .circle {
-                background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
-                width: 24px;
-                height: 24px;
-                -moz-border-radius: 50px;
-                -webkit-border-radius: 50px;
-                border-radius: 50px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: white;
-            }
         }
+
+        // .request {
+        //     max-width: 360px;
+        //     display: flex;
+        //     justify-content: space-between;
+        //     margin-top: 34px;
+        //     p {
+        //         color: rgba(1, 0, 16, 1);
+        //         opacity: 0.5;
+        //     }
+        //     .circle {
+        //         background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+        //         width: 24px;
+        //         height: 24px;
+        //         -moz-border-radius: 50px;
+        //         -webkit-border-radius: 50px;
+        //         border-radius: 50px;
+        //         display: flex;
+        //         justify-content: center;
+        //         align-items: center;
+        //         color: white;
+        //     }
+        // }
     }
 }
 @media screen and (max-width: 576px) {
