--- a/component/nestedComponent/home/storySlider/createStory/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/index.scss
@@ -1,4 +1,36 @@
 .CreateStory_main {
     width: 100px;
     height: 140px;
+    cursor: pointer;
+}
+
+.createStoryModal_main {
+    width: 700px !important;
+    // height: 740px !important;
+    .ant-modal-content {
+        // width: 100%;
+        // height: 740px;
+        // width: 100%;
+
+        .ant-modal-close {
+            color: #010010;
+            padding-right: 10px;
+        }
+        .ant-modal-header {
+            margin: 0 20px 0 20px;
+            padding: 20px 18px 20px 18px;
+            .ant-modal-title {
+                font-weight: 500;
+                font-size: 20px;
+                color: #010010;
+            }
+        }
+        .ant-modal-body {
+            padding: 24px 20px 24px 20px;
+        }
+
+        .ant-modal-footer {
+            display: none;
+        }
+    }
 }
