--- a/component/nestedComponent/home/storySlider/index.scss
+++ b/component/nestedComponent/home/storySlider/index.scss
@@ -1,18 +1,12 @@
 .StorySlider_main {
     // width: 100%;
     // height: 100%;
-    .slick-slider .slick-initialized {
-        width: 580px;
+    .slick-slider {
+        width: 100%;
         height: 140px;
-        // .slick-arrow .slick-prev::before {
-        //     display: block !important;
-        // }
-        .slick-list {
-            .slick-track {
-                .slick-slide .slick-active .slick-cloned {
-                    min-width: 100px !important;
-                }
-            }
+
+        .slick-active {
+            max-width: 120px !important;
         }
     }
 }
