--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ a {
 
 input:focus {
   // outline: pink !important;
-  border-color: #f9445b !important;
+  border-color: none !important;
   -webkit-box-shadow: none !important;
   -moz-box-shadow: none !important;
   box-shadow: none !important;
