dashboard-ui-issues

--- a/component/nestedComponent/home/homePost/index.scss
+++ b/component/nestedComponent/home/homePost/index.scss
@@ -2,7 +2,7 @@
     // display: flex;
     // width: 100%;
     // max-width: 580px;
-    min-width: 100%;
+    width: 100%;
     border-bottom: 0.001em solid #eaeaea;
 
     padding-bottom: 42px;
