--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -5,4 +5,4 @@
 @import "../friendsList/requestCard";
 @import "../friendsList/smallRequestCard";
 @import "../storySlider/createStory/button";
-@import "../home/trending";
+@import "../home/trendingButton";
