--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -5,7 +5,7 @@
     //     border: 1px solid #000;
     // }
     .left-side {
-        overflow: scroll;
+        overflow: auto;
         // position: fixed;
         // left: 10px;
         // position: fixed;
@@ -48,7 +48,7 @@
     .right-side {
         width: 40%;
         // height: 100vh;
-        overflow: scroll;
+        // overflow: scroll;
         margin: 0px 10px 0px 10px;
         // position: fixed;
         // right: -40px;
@@ -56,9 +56,9 @@
         // right: 0px;
         // position: relative;
         // padding: 40px 80px 30px;
-        &::-webkit-scrollbar {
-            display: none;
-        }
+        // &::-webkit-scrollbar {
+        //     display: none;
+        // }
         .text {
             p {
                 margin: 40px 0px 10px 20px;
