--- a/component/nestedComponent/home/storySlider/index.scss
+++ b/component/nestedComponent/home/storySlider/index.scss
@@ -2,11 +2,15 @@
     // width: 100%;
     // height: 100%;
     .slick-slider {
-        width: 100%;
-        height: 140px;
+        // min-width: 100%;
 
-        .slick-active {
-            max-width: 120px !important;
+        // height: 140px;
+
+        // .slick-active {
+        // max-width: 120px !important;
+        // }
+        .slick-arrow {
+            display: none !important;
         }
     }
 }
