--- a/component/re-usabelComponent/home/trendingButton/index.scss
+++ b/component/re-usabelComponent/home/trendingButton/index.scss
@@ -1,14 +1,8 @@
 .trend_button {
-    .heading {
-        p {
-            font-weight: 500;
-            font-size: 16px;
-            color: #010010;
-
-            opacity: 0.5;
-        }
-    }
     button {
+        display: flex;
+        align-items: center;
+        padding: 20px;
         width: 100%;
         height: 48px;
         border-radius: 8px;
