--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -6,7 +6,9 @@
 @import "../friendList/closeFriends";
 @import "../friendList/family";
 @import "../home/storySlider/createStory";
-@import "../home/storySlider";
+@import "../home/storySlider/stories";
 @import "../home/storySlider/createStory/createStoryOption";
 @import "../home/storySlider/createStory/createTextStory";
 @import "../home/trending";
+@import "../home/homeSponsored/sponsoreds";
+@import "../home/homeSponsored/sponsoredPost";
