--- a/component/re-usabelComponent/friendsList/smallRequestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/smallRequestCard/index.scss
@@ -100,7 +100,8 @@
     // }
     .selected {
         .btn-primary {
-            background: #fe5e71;
+            background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
+
             // margin-top: 20px;
         }
     }
