--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -11,6 +11,7 @@
     }
     .logo {
         position: fixed;
+        cursor: pointer;
         top: 32px;
         left: 49px;
         .logoChild {
