--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -10,23 +10,36 @@
         .ant-tabs-top > .ant-tabs-nav::before {
             border: none;
         }
-
+        .ant-tabs-nav-wrap {
+            height: 100px;
+        }
         .ant-tabs-nav {
             margin: 0px 40px 0px 40px;
             .ant-tabs-extra-content {
                 .add_button {
-                    background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
                     color: #ffffff;
                     width: 140px;
                     height: 36px;
                     padding: unset;
                     border-radius: 8px;
                     font-weight: 600;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
                     p {
-                        margin: unset;
+                        margin: 0;
                         font-size: 12px;
+                        margin-right: 6px;
                     }
+                }
+
+                .close {
+                    background: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
+                }
+
+                .family {
+                    background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
                 }
             }
             .ant-tabs-nav-more {
@@ -47,22 +60,26 @@
             }
             .ant-tabs-tab-active {
                 .friends_request {
-                    background: #c39eff;
+                    background: linear-gradient(90deg, #c39eff 0%, #a576f3 100%);
                     color: #ffffff;
+                    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
                     font-weight: 600;
                 }
                 .all_frineds {
-                    background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+                    background: linear-gradient(90deg, #ef843b 0%, #ffa567 100%);
+
                     color: #ffffff;
                     font-weight: 600;
                 }
                 .close_friends {
-                    background: #6ec2ff;
+                    background: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
                     color: #ffffff;
+
                     font-weight: 600;
                 }
                 .family {
                     background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+
                     color: #ffffff;
                     font-weight: 600;
                 }
@@ -74,20 +91,23 @@
                 color: #010010;
                 width: 190px;
                 height: 56px;
+
                 border-color: white;
             }
 
             .friends_request:hover {
-                background: #c39eff;
+                background: linear-gradient(90deg, #c39eff 0%, #a576f3 100%);
                 color: #ffffff;
             }
 
             .all_frineds:hover {
                 background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+
                 color: #ffffff;
             }
             .close_friends:hover {
-                background: #6ec2ff;
+                background: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
+
                 color: #ffffff;
             }
             .family:hover {
