--- a/component/nestedComponent/home/storySlider/createStory/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/index.scss
@@ -1,7 +1,13 @@
 .CreateStory_main {
-    width: 100px;
-    height: 140px;
+    width: 89px;
+    height: 120px;
     cursor: pointer;
+    transition: transform 0.3s;
+    &:hover {
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
 }
 
 .createStoryModal_main {
