--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -1,12 +1,23 @@
-.main {
-    width: 100px;
+.story_main {
+    width: 89px;
+    height: 120px;
     // width: 100%;
-    height: 140px;
+    box-shadow: 0px 4px 6px 0px #0000002e;
+    margin-left: 10px;
+    // background-size: cover;
     // border: 1px solid black;
     // padding:152px 75px 0 75px
+    transition: transform 0.3s;
+    background-position: top;
     border-radius: 16px;
     position: relative;
-    margin: 0px;
+    cursor: pointer;
+
+    &:hover {
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
     // background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.8) 100%),
     //     linear-gradient(0deg, rgba(110, 194, 255, 0.57), rgba(110, 194, 255, 0.57));
 
@@ -19,13 +30,18 @@
         left: 12px;
     }
     .name {
-        max-width: 50px;
-        position: absolute;
-        color: white;
-        top: 96px;
-        left: 12px;
-        font-size: 12px;
-        line-height: 16px;
-        font-weight: 600;
+        p {
+            width: 27px;
+            // height: 22px;
+            position: absolute;
+            color: #ffffff;
+            top: 88px;
+            left: 12px;
+            font-size: 10px;
+            line-height: 16px;
+            font-weight: 600;
+
+            line-height: 11px;
+        }
     }
 }
