--- a/component/re-usabelComponent/friendsList/requestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/requestCard/index.scss
@@ -59,20 +59,21 @@
 
     .freind_request {
         .btn-primary {
-            background: #c39eff;
+            background: linear-gradient(90deg, #c39eff 0%, #a576f3 100%);
+
             color: #ffffff;
         }
     }
     .all_freinds {
         .btn-primary {
-            background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+            background: linear-gradient(90deg, #ef843b 0%, #ffa567 100%);
 
             color: #ffffff;
         }
     }
     .close_friends {
         .btn-primary {
-            background: #6ec2ff;
+            background: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
 
             color: #ffffff;
         }
@@ -93,6 +94,7 @@
     }
     button {
         border-radius: 12px;
+
         width: 100%;
         height: 36px;
         font-weight: 600;
