--- a/component/re-usabelComponent/home/trendingButton/index.scss
+++ b/component/re-usabelComponent/home/trendingButton/index.scss
@@ -2,36 +2,46 @@
     button {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 20px;
         width: 100%;
         height: 48px;
         border-radius: 8px;
         border: unset;
+        background: #f7f7f7;
+
         margin-bottom: 8px;
+        &:hover {
+            background: #f7f7f7;
+        }
         p {
             font-weight: 600;
-            // color: black;
+            color: #111111;
+
             font-size: 14px;
             margin: 0px;
         }
+        .post_ranking {
+            font-size: 9px;
+        }
     }
 
-    .button_one {
-        background: #c39eff;
-    }
-    .button_one:hover {
-        background: #c39eff;
-    }
-    .button_two {
-        background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
-    }
-    .button_three {
-        background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
-    }
-    .button_four {
-        background: #6ec2ff;
-    }
-    .button_four:hover {
-        background: #6ec2ff;
-    }
+    // .button_one {
+    //     background: #c39eff;
+    // }
+    // .button_one:hover {
+    //     background: #c39eff;
+    // }
+    // .button_two {
+    //     background: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
+    // }
+    // .button_three {
+    //     background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+    // }
+    // .button_four {
+    //     background: #6ec2ff;
+    // }
+    // .button_four:hover {
+    //     background: #6ec2ff;
+    // }
 }
